# API-IntraCom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/neuracom/: Client.hpp  ClientManager.hpp  ISocket.hpp  Interpreter.hpp  NetworkService.hpp  Session.hpp  SessionManager.hpp  TcpAcceptor.hpp  TcpSocket.hpp
project/: CMakeLists.txt
project/neuracom/: CMakeLists.txt
project/neuracom/include/: Interpreter.hpp  NetworkService.hpp  Server.hpp  TCPAsyncServer.hpp
project/neuracom/include/neuracom/: Interpreter.hpp  ServerManager.hpp  Session.hpp  SessionManager.hpp  TcpAcceptor.hpp
project/neuracom/src/: Interpreter.cpp  TcpAcceptor.cpp  TcpSocket.cpp
project/test/server/: CMakeLists.txt  main.cpp
project/tests/client/: main.cpp
project/tests/server/: Core.hpp
release_v1.0.0/include/: Client.hpp  TcpAcceptor.hpp  TcpSocket.hpp
release_v1.0.0/lib/: libdneuracom.dylib
sources/: CMakeLists.txt
sources/shared/: CMakeLists.txt  ClientManager.hpp  ISocket.hpp  Interpreter.cpp  ServerManager.hpp  TcpAcceptor.cpp  TcpSocket.cpp
sources/test/client/: CMakeLists.txt  main.cpp
sources/test/server/: CMakeLists.txt  Core.hpp  main.cpp
src/: CMakeLists.txt  Interpreter.cpp  TcpAcceptor.cpp  TcpSocket.cpp
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Client.hpp  ClientManager.hpp  ISocket.hpp  Interpreter.cpp  Interpreter.hpp  NetworkService.hpp  ParocSession.hpp  ParocSessionManager.hpp  TCPAsyncServer.hpp  TcpAcceptor.cpp  TcpAcceptor.hpp  TcpSocket.cpp  TcpSocket.hpp
src/server/: CMakeLists.txt  Core.hpp  main.cpp
src/server/utils/: ConfigLoader.hpp
src/tests/: client.cpp  client.hpp  config.hpp  server.cpp  server.hpp
tmp/: README.md  config.yml
tmp/project/: CMakeLists.txt
tmp/project/neuracom/: CMakeLists.txt
tmp/project/neuracom/include/neuracom/: ClientManager.hpp  Session.hpp  TcpSocket.hpp
tmp/project/neuracom/src/: Interpreter.cpp
tmp/project/tests/client/: CMakeLists.txt
tmp/project/tests/server/: Core.hpp
